fix to display overflow and width

--- a/src/app/canvas/canvas.css
+++ b/src/app/canvas/canvas.css
@@ -218,5 +218,6 @@ ul li a:focus-visible {
   }
   .dashboard-sections > div {
     padding: 3px;
+    max-width: 100%;
   }
 }
